feat: add enterprise features and contact information
- Add comprehensive documentation (README.md, SECURITY.md)
- Implement enterprise contact form with Supabase integration
- Add Stripe payment processing
- Set up monitoring and observability
- Configure CI/CD with GitHub Actions
- Create enterprise-grade project structure

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <header>
         <h1>Iron Code</h1>
+        <p class="tagline">Forging Digital Excellence</p>
         <nav>
             <ul>
                 <li><a href="dashboard.html">Project Dashboard</a></li>
@@ -20,7 +21,38 @@
         </nav>
     </header>
     <main>
-        <p>Welcome to the forge. Here, we build with strength and precision.</p>
+        <section class="hero">
+            <h2>Welcome to the Digital Forge</h2>
+            <p class="hero-text">Where innovation meets craftsmanship in the art of code creation. Like master blacksmiths of old, we forge digital solutions with unwavering precision and strength.</p>
+        </section>
+        
+        <section class="features">
+            <h2>Our Forging Process</h2>
+            <div class="feature-grid">
+                <div class="feature-card">
+                    <h3>🔥 The Heat of Innovation</h3>
+                    <p>We ignite possibilities through cutting-edge technology and creative problem-solving, turning complex challenges into elegant solutions.</p>
+                </div>
+                <div class="feature-card">
+                    <h3>⚒️ The Strike of Precision</h3>
+                    <p>Every line of code is crafted with meticulous attention to detail, ensuring robust and scalable applications that stand the test of time.</p>
+                </div>
+                <div class="feature-card">
+                    <h3>💪 The Strength of Experience</h3>
+                    <p>Built on years of industry expertise, our solutions are tempered by real-world challenges and strengthened by continuous improvement.</p>
+                </div>
+                <div class="feature-card">
+                    <h3>🛡️ The Shield of Security</h3>
+                    <p>Your digital assets are protected by enterprise-grade security measures, forged with the latest cybersecurity best practices.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="cta">
+            <h2>Ready to Forge Your Digital Future?</h2>
+            <p>Join the ranks of industry leaders who trust Iron Code to transform their digital vision into reality.</p>
+            <a href="contact.html" class="cta-button">Start Your Journey</a>
+        </section>
     </main>
     <footer>
         <nav>
